# bondsenseai

./: .gitignore  README.md  main.py  pyproject.toml  sampleUserInteraction.md  todoList.md
agent/: main.py
api/: main.py
db/: database.py  model.py
ingestions/: main.py
ui/: chat.py  main.py  upload.py
